--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,8 @@
  *= require_tree .
  *= require_self
  */
+ @import 'bootstrap';
+ @import 'font_awesome5_webfont';
+ @import 'font_awesome5.css';
+ @import 'select2';
+ @import 'select2-bootstrap';
