--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,21 @@
   </head>
 
   <body>
-    <%= yield %>
+    <%= render "layouts/navbar" %>
+
+    <div class="container">
+      <div class="card">
+        <div class="card-body card-container">
+          <div class="row">
+            <div class="col-lg-8">
+              <%= yield %>
+            </div>
+            <div class="col-lg-4">
+              <%= render "layouts/sidebar" %>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
