Ajout du système d'authentification pour les utilisateurs

--- a/app/assets/stylesheets/forumia.scss
+++ b/app/assets/stylesheets/forumia.scss
@@ -1,6 +1,9 @@
 body {
     padding-top: 56px;
 }
+.field-error {
+  border: 1px solid #dc3545!important;
+}
 /*Comment List styles*/
 .comment-list .row {
   margin-bottom: 0px;
