--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
     <title>Forumia</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
@@ -17,6 +17,11 @@
         <div class="card-body card-container">
           <div class="row">
             <div class="col-lg-8">
+              <% flash.each do |key, value| %>
+                <div class="<%= flash_class key %>">
+                  <%= fa_icon flash_icon(key), class: "mr-1" %> <%= value %>
+                </div>
+              <% end %>
               <%= yield %>
             </div>
             <div class="col-lg-4">
