--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -22,7 +22,7 @@
       <%= f.input :email, prepend: fa_icon("at"), placeholder: "Adresse email" %>
       <%= f.input :password, prepend: fa_icon("key"), placeholder: "Mot de passe" %>
       <%= f.input :password_confirmation, prepend: fa_icon("check"), placeholder: "Confirmation du mot de passe" %>
-      <%= f.button :submit, value: "S'inscrire", class: "btn-primary btn-size" %>
+      <%= f.button :submit, value: "S'inscrire", class: "btn-info btn-size" %>
     </div>
   </div>
 
