--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -1,35 +1,29 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<%= simple_form_for resource, as: resource_name, url: registration_path(resource_name), wrapper: :input_group, html: { method: :put } do |f| %>
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= f.error_notification %>
+  <% if f.error_notification %>
+    <div class="alert alert-danger">
+      <%= fa_icon "exclamation-circle", class: "mr-1" %>
+      Veuillez résoudre les erreurs ci-dessous
+    </div>
+  <% end %>
 
-  <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
-
-    <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-      <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
-    <% end %>
-
-    <%= f.input :password,
-                hint: "leave it blank if you don't want to change it",
-                required: false,
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :password_confirmation,
-                required: false,
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :current_password,
-                hint: "we need your current password to confirm your changes",
-                required: true,
-                input_html: { autocomplete: "current-password" } %>
+  <div class="card mb-4">
+    <h5 class="card-header card-header-l"><%= fa_icon "address-card", class: "mr-1" %> Général</h5>
+    
+    <div class="card-body card-body-l">
+      <%= f.input :username, prepend: fa_icon("user"), readonly: true, placeholder: "Nom d'utilisateur" %>
+      <%= f.input :email, prepend: fa_icon("at"), placeholder: "Adresse email" %>
+    </div>
   </div>
 
-  <div class="form-actions">
-    <%= f.button :submit, "Update" %>
+  <div class="card mb-4">
+    <h5 class="card-header card-header-l2"><%= fa_icon "user-secret", class: "mr-1" %> Authentification</h5>
+    <div class="card-body card-body-l2">
+      <%= f.input :password, prepend: fa_icon("key"), placeholder: "Mot de passe" %>
+      <%= f.input :password_confirmation, prepend: fa_icon("check"), placeholder: "Confirmation du mot de passe" %>
+    </div>
   </div>
+
+  <%= f.button :submit, value: "Mettre à jour", class: "btn-secondary btn-block" %>
+
 <% end %>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
