Ajout de la liste des utilisateurs en ligne

--- a/app/assets/stylesheets/forumia.scss
+++ b/app/assets/stylesheets/forumia.scss
@@ -265,6 +265,10 @@ a:hover {
   border-radius: 0 0 8px 8px!important;
 }
 
+#last-users {
+  min-height: 151px!important;
+}
+
 .card-header-l3 {
   color: #fff!important;
   background-color: #707070!important;
