--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,8 +4,6 @@
 
     <p>ForuMia est un forum en développement depuis le 17 Août 2019. Créé par Nox (anciennement Cinox), ancien membre assidu de JeuxVideo.Com et créateur de multiples JVC-Likes entre 2010 et 2012.</p>
 
-    <p>ForuMia se veut nostalique de cette époque qui a marqué toute une génération, c'est pourquoi les couleurs et la structure du site sont volontairement inspiré des JVC-Likes. </p>
-
     <p>Le but de ce forum est de créer une communauté libre, unie et conviviale, où le staff se veut attentif et à l'écoute des membres. Si tu souhaites participer à ce projet, n'hésites pas à nous rejoindre !</p>
 
   </div>
@@ -17,15 +15,15 @@
     <div class="card mb-4">
       <h5 class="card-header card-header-l2"><%= fa_icon "signal", class: "mr-1" %> Statistiques diverses</h5>
       <div class="card-body card-body-l2">
-        <div class="float-right">10</div>
+        <div class="float-right"><%= @user_count %></div>
         Nombre de membres inscrits<br />
-        <div class="float-right">0</div>
+        <div class="float-right">?</div>
         Nombre d'articles publié<br />
-        <div class="float-right">2</div>
+        <div class="float-right">?</div>
         Nombre de forums créé<br />
-        <div class="float-right">0</div>
+        <div class="float-right">?</div>
         Nombre de topics créé<br />
-        <div class="float-right">0</div>
+        <div class="float-right">?</div>
         Nombre de message posté<br />
       </div>
     </div>
@@ -34,17 +32,11 @@
   <div class="col-lg-6">
     <div class="card mb-4">
       <h5 class="card-header card-header-l2"><%= fa_icon "users", class: "mr-1" %> Derniers inscrits</h5>
-      <div class="card-body card-body-l2">
-        <div class="float-right">le 31/03/19</div>
-        <div class="badge badge-secondary">MacBook</div><br />
-        <div class="float-right">le 31/03/19</div>
-        <div class="badge badge-secondary">Eminem</div><br />
-        <div class="float-right">le 31/03/19</div>
-        <div class="badge badge-secondary">Max</div><br />
-        <div class="float-right">le 31/03/19</div>
-        <div class="badge badge-secondary">UnCactus</div><br />
-        <div class="float-right">le 31/03/19</div>
-        <div class="badge badge-secondary">Alien</div><br />
+      <div class="card-body card-body-l2" id="last-users">
+        <% @users.each do |u| %>
+          <div class="float-right">le <%= display_date u.created_at %></div>
+          <div class="badge badge-secondary"><%= u.username %></div><br />
+        <% end %>
       </div>
     </div>
   </div>
@@ -56,12 +48,12 @@
   <div class="col-lg-4">
     <a href="article.html" class="card zoom mb-4">
       <img src="http://placehold.it/600x200" class="img-responsive article-img img-fluid" />
-      <h5 class="card-header card-header-l3 article-title">Ouverture de ForuMia...</h5>
+      <h5 class="card-header card-header-l3 article-title">Lorem ipsum dolor sit amet</h5>
       <div class="card-body card-article card-body-l3">
 
         <p class="article-body">
-          C'est avec une grande joie que nous vous annonçons l'ouverture de ForuMia.
-          Le forum est encore en développement mais vous pouvez dors et déjà poster sur les forums.
+        Proin dui diam, vestibulum non scelerisque ut, tincidunt eu odio.
+        Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
         </p>
 
       </div>
@@ -71,12 +63,12 @@
   <div class="col-lg-4">
     <a href="article.html" class="card zoom mb-4">
       <img src="http://placehold.it/600x200" class="img-responsive article-img img-fluid" />
-      <h5 class="card-header card-header-l3 article-title">Ouverture de ForuMia...</h5>
+      <h5 class="card-header card-header-l3 article-title">Lorem ipsum dolor sit amet</h5>
       <div class="card-body card-article card-body-l3">
 
         <p class="article-body">
-          C'est avec une grande joie que nous vous annonçons l'ouverture de ForuMia.
-          Le forum est encore en développement mais vous pouvez dors et déjà poster sur les forums.
+        Proin dui diam, vestibulum non scelerisque ut, tincidunt eu odio.
+        Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
         </p>
 
       </div>
@@ -86,12 +78,12 @@
   <div class="col-lg-4">
     <a href="article.html" class="card zoom mb-4">
       <img src="http://placehold.it/600x200" class="img-responsive article-img img-fluid" />
-      <h5 class="card-header card-header-l3 article-title">Ouverture de ForuMia...</h5>
+      <h5 class="card-header card-header-l3 article-title">Lorem ipsum dolor sit amet</h5>
       <div class="card-body card-article card-body-l3">
 
         <p class="article-body">
-          C'est avec une grande joie que nous vous annonçons l'ouverture de ForuMia.
-          Le forum est encore en développement mais vous pouvez dors et déjà poster sur les forums.
+        Proin dui diam, vestibulum non scelerisque ut, tincidunt eu odio.
+        Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
         </p>
 
       </div>
