--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -2,24 +2,29 @@
   as: resource_name,
   url: registration_path(resource_name),
   wrapper: :input_group,
-  html: { method: :put, autocomplete: 'off' } do |f| %>
+  html: { method: :put } do |f| %>
 
   <%= render partial: "users/shared/error_messages", locals: { f: f } %>
 
   <div class="card mb-4">
-    <h5 class="card-header card-header-l"><%= fa_icon "address-card", class: "mr-1" %> Général</h5>
+    <h5 class="card-header card-header-l"><%= fa_icon "user-circle", class: "mr-1" %> Identifiants</h5>
     
     <div class="card-body card-body-l">
       <%= f.input :username, prepend: fa_icon("user"), readonly: true, placeholder: "Nom d'utilisateur" %>
       <%= f.input :email, prepend: fa_icon("at"), placeholder: "Adresse email" %>
+      <%= f.input :password, prepend: fa_icon("key"), placeholder: "Mot de passe" %>
+      <%= f.input :password_confirmation, prepend: fa_icon("check"), placeholder: "Confirmation du mot de passe" %>
     </div>
   </div>
   
   <div class="card mb-4">
-    <h5 class="card-header card-header-l2"><%= fa_icon "user-secret", class: "mr-1" %> Authentification</h5>
+    <h5 class="card-header card-header-l2"><%= fa_icon "address-card", class: "mr-1" %> Profil</h5>
     <div class="card-body card-body-l2">
-      <%= f.input :password, prepend: fa_icon("key"), placeholder: "Mot de passe" %>
-      <%= f.input :password_confirmation, prepend: fa_icon("check"), placeholder: "Confirmation du mot de passe" %>
+      <%= f.input :birthdate, wrapper: :input_group_select, prepend: fa_icon("birthday-cake"), start_year: Time.current.year-80, end_year: Time.current.year-10 %>
+      <%= f.input :description, prepend: fa_icon("comment-alt"), placeholder: "Description" %>
+      <%= f.input :avatar, prepend: fa_icon("id-card-alt"), placeholder: "Photo de profil (lien noelshack)" %>
+      <%= f.input :background, prepend: fa_icon("image"), placeholder: "Photo de couverture (lien noelshack)" %>
+      <%= f.input :music, prepend: fa_icon("music"), placeholder: "Musique (lien youtube)" %>
     </div>
   </div>
 
