--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -15,7 +15,7 @@
         Aucun utilisateur n'est connecté.
       <% end %>
       <% @users_online.each do |u| %>
-        <span class="badge badge-secondary"><%= u.username %></span>
+        <%= link_to u.username, user_path(u.username), class: "badge badge-secondary" %>
       <% end %>
     </div>
   </div>
