--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,7 +5,7 @@
             <img src="<%= display_avatar(@user, "profile") %>" width="130" class="avatar-img rounded mb-2 img-thumbnail">
             </div>
             <div class="media-body mb-3">
-                <a class="float-right" id="stop" href="#"><%= fa_icon "pause" %></a>
+                <%= display_player(@user) %>
                 <h4 class="mt-0 mb-2"><%= @user.username %></h4>
             </div>
         </div>
