--- a/app/assets/stylesheets/forumia.scss
+++ b/app/assets/stylesheets/forumia.scss
@@ -465,13 +465,49 @@ a#navbarDropdown.nav-link.dropdown-toggle::after {
  font-size: 14px!important; 
 }
 
+.card-profile {
+  padding: 15px!important;
+  padding-bottom: 0!important;
+}
+
+@media screen and (max-width: 1199px) {
+  .card-profile {
+    min-height: 168px!important;
+  }
+}
+
 @media screen and (max-width: 991px) {
+  .card-profile {
+    min-height: auto!important;
+  }
   .input-resize {
     width: 250px!important;
+  }
+  .nav-link span {
+    display: none!important;
+  }
+  .dropdown-menu.show {
+    top: 55px!important;
+    position: fixed !important;
+    left: 0%;
+    right: 0%;
+    border-radius: 0px 0px 4px 4px!important;
+    text-align: center!important;
+  }
+  
+  .dropdown-item {
+    display: inline!important;
+    padding: 0.25rem 0.5rem!important;
   }
 }
 
 @media screen and (max-width: 768px) {
+  .input-resize {
+    width: 150px!important;
+  }
+}
+
+@media screen and (max-width: 637px) {
   .input-resize {
     width: 150px!important;
   }
@@ -587,10 +623,16 @@ a#navbarDropdown.nav-link.dropdown-toggle::after {
 }
 
 .bg-background {
-  width: 100%;
-  height: 155px;
-  background: no-repeat;
-  background-size: 100%;
+  background-size:cover!important;
+  background-repeat: no-repeat!important;
+}
+
+.navbar-mobile {
+  display: none!important;
+}
+
+.icon-mobile {
+  font-size: 20px;
 }
 
 @media screen and (max-width: 992px) {
@@ -617,6 +659,10 @@ a#navbarDropdown.nav-link.dropdown-toggle::after {
   .bg-background {
     background-size: auto;
   }
+
+  .navbar-mobile {
+    display: block!important;
+  }
 }
 
 .border-grey {
@@ -631,9 +677,24 @@ a#navbarDropdown.nav-link.dropdown-toggle::after {
   border-radius: 0 0 4px 4px;
 }
 
+.profile-bar {
+  height: 50px;
+  padding-bottom: 52px!important
+}
+
 .avatar-img {
   height: 130px!important;
   width: 130px!important;
+  margin-top: -60px!important;
+  margin-bottom: 83px!important;
+}
+
+.media-body {
+  margin-left: -150px!important;
+}
+
+.img-thumbnail {
+  padding: 0!important
 }
 
 @media screen and (max-width: 440px) {
