--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,47 +1,43 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-black fixed-top">
   <div class="container">
-    <div class="navbar-brand">ForuMia</div>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarResponsive">
-      <ul class="nav navbar-nav mr-auto">
-        <li class="nav-item zoom nav-zoom active">
-          <a class="nav-link" href="<%= root_path %>"><%= fa_icon "home" %> Accueil
-          <span class="sr-only">(current)</span>
-          </a>
-        </li>
-      </ul>
-      <ul class="nav navbar-nav ml-auto">
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <%= display_avatar(current_user) %>
-            <span class="account-nav <%= "username-nav" if current_user %>">
-              <%= current_user ? current_user.username : "Mon compte" %>
-            </span>
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <% if !current_user %>
-              <%= link_to new_user_session_path, class: "dropdown-item" do %>
-                <%= fa_icon "sign-in-alt" %> Connexion
-              <% end %>
-              <%= link_to new_user_registration_path, class: "dropdown-item" do %>
-                <%= fa_icon "user-plus" %> Inscription
-              <% end %>
-            <% else %>
-            <%= link_to user_path(current_user.username), class: "dropdown-item" do %>
-              <%= fa_icon "address-card" %> Profil
+    <%= link_to "Forumia", root_path, class: "navbar-brand" %>
+    <ul class="nav navbar-nav mr-auto">
+      <li class="nav-item zoom nav-zoom active">
+        <%= link_to root_path, class: "nav-link" do %>
+          <%= fa_icon "home" %> <span>Accueil</span>
+        <% end %>
+        </a>
+      </li>
+    </ul>
+    <ul class="nav navbar-nav ml-auto">
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <%= display_avatar(current_user) %>
+          <span class="account-nav <%= "username-nav" if current_user %>">
+            <span><%= current_user ? current_user.username : "Mon compte" %></span>
+          </span>
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <% if !current_user %>
+            <%= link_to new_user_session_path, class: "dropdown-item" do %>
+              <%= fa_icon "sign-in-alt" %> Connexion
             <% end %>
-            <%= link_to edit_user_registration_path, class: "dropdown-item" do %>
-              <%= fa_icon "cog" %> Paramètre
+            <%= link_to new_user_registration_path, class: "dropdown-item" do %>
+              <%= fa_icon "user-plus" %> Inscription
             <% end %>
-              <%= link_to destroy_user_session_path, method: :delete, class: "dropdown-item" do %>
-                <%= fa_icon "sign-out-alt" %> Déconnexion
-              <% end %>
+          <% else %>
+          <%= link_to user_path(current_user.username), class: "dropdown-item" do %>
+            <%= fa_icon "address-card" %> Profil
+          <% end %>
+          <%= link_to edit_user_registration_path, class: "dropdown-item" do %>
+            <%= fa_icon "cog" %> Paramètre
+          <% end %>
+            <%= link_to destroy_user_session_path, method: :delete, class: "dropdown-item" do %>
+              <%= fa_icon "sign-out-alt" %> Déconnexion
             <% end %>
-          </div>
-        </li>
-      </ul>
-    </div>
+          <% end %>
+        </div>
+      </li>
+    </ul>
   </div>
 </nav>
