--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-black fixed-top">
   <div class="container">
-    <%= link_to "Forumia", root_path, class: "navbar-brand" %>
+    <%= link_to "ForuMia", root_path, class: "navbar-brand" %>
     <ul class="nav navbar-nav mr-auto">
       <li class="nav-item zoom nav-zoom active">
         <%= link_to root_path, class: "nav-link" do %>
