Permet d'upload sa photo de profil/couverture sur noelshack directement dans les paramètres

--- a/app/assets/stylesheets/forumia.scss
+++ b/app/assets/stylesheets/forumia.scss
@@ -4,6 +4,9 @@ body {
 .custom-control-label {
   cursor: pointer;
 }
+.custom-file-input ~ .custom-file-label::after {
+  content: "Parcourir";
+}
 /*Comment List styles*/
 .comment-list .row {
   margin-bottom: 0px;
