Amélioration du pied de page : background et position

--- a/app/assets/stylesheets/forumia.scss
+++ b/app/assets/stylesheets/forumia.scss
@@ -1,5 +1,5 @@
 body {
-    padding-top: 56px;
+  padding-top: 56px;
 }
 .custom-control-label {
   cursor: pointer;
@@ -247,7 +247,7 @@ a#navbarDropdown.nav-link.dropdown-toggle::after {
 
 .card-container {
   border: none!important;
-  min-height: 700px!important
+  min-height: 90vh!important
 }
 
 .card-body {
