--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,6 @@
-<footer class="py-5 bg-dark">
+<footer class="py-5">
 <div class="container">
-  <p class="m-0 text-center text-white">Copyright &copy; ForuMia 2019</p>
+  <p class="m-0 text-center">Copyright &copy; <%= link_to 'Forumia', root_path %> 2019</p>
+  <p class="m-0 text-center">Développé par <%= link_to 'Nox', user_path('Nox') %></p>
 </div>
 </footer>
